# newclaw

./: .gitignore  ALL_CHANNELS_100_PERCENT.md  ANALYSIS.md  ARCHITECTURE.md  BACKUP_SUMMARY.md  BENCHMARK_REPORT.md  CHANGELOG-v0.6.0.md  CHANGELOG-v0.6.1.md  CHANGELOG-v0.7.1.md  CHANGELOG.md  CHANGELOG_v0.7.2.md  CHANNELS_QUICK_REFERENCE.md  CHANNEL_MIGRATION_COMPLETE.md  CODE_REVIEW_CHECKLIST.md  COMPILE_FIX_LOG.md  Cargo.toml  DASHBOARD_AUTH_FIX.md  DEPLOYMENT.md  DEPLOY_GUIDE.md  DESIGN.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  DOCKERFILE  Dockerfile  Dockerfile.binary  FEATURE_CHECKLIST.md  FINAL_CHANNELS_STATUS.md  FINAL_FIX_v0.7.2.md  FINAL_TEST_SUMMARY.md  FIX_PLAN.md  GITHUB_PUSH_FAILED_FINAL.md  GIT_PUSH_STATUS.md  GIT_STATUS_REPORT.md  HEARTBEAT.md  IMPLEMENTATION_REPORT.md  MEMORY-MIGRATION-PHASE1-COMPLETE.md  MEMORY-MIGRATION-PLAN.md  MIGRATION.md  NEWCLAW_VS_ECOSYSTEM.md  NEXT_STEPS.md  (+96 more)
.github/workflows/: build.yml  quick-build.yml
benches/: embedding_bench.rs
config/: default.toml  feishu.toml  newclaw.example.toml  production.toml  prometheus.yml  watchdog.example.toml
dashboard-ui/: package-lock.json  package.json  vite.config.ts
dashboard-ui-auth/: README.md  index.html  vite.config.ts
dashboard-ui-auth/src/: App.tsx
dashboard-ui/src/: App.tsx  index.css  vite-env.d.ts
deploy/: health-check.sh  install.sh  newclaw-dashboard.service  newclaw-smart.service  newclaw-watchdog.service  newclaw.service  sync-version.sh
docs/: ARCHITECTURE_FEDERATION.md  CLAWS_COMPARISON_AND_NEWCLAW_IMPROVEMENTS.md  DEVELOPMENT_PLAN.md  GLM_PROVIDERS.md  MODELS.md  SUMMARY.md  channel_migration_plan.md  deployment-guide.md  feishu-integration-v0.4.0.md  feishu-websocket-design.md  feishu_file_integration.md  progress_report_phase1.md  troubleshooting.md  v0.4.0-DAY1-WORKLOG.md  v0.4.0-DEVELOPMENT_PLAN.md  v0.4.0-PROGRESS-REPORT.md  v0.4.0-STATUS.md  v0.4.0-completion-summary.md  v0.4.0-quick-reference.md  v0.5.0-DEVELOPMENT-PLAN.md  v0.5.1-DEVELOPMENT-PLAN.md  v0.5.2-DEVELOPMENT-PLAN.md  v0.5.3-DEVELOPMENT-PLAN.md  v0.5.4-DEVELOPMENT-PLAN.md  v0.5.x-COMPLETION-REPORT.md  v0.6.0-watchdog-architecture.md  v0.7.0-DEVELOPMENT-SUMMARY.md  v0.7.0-TASKFLOW-ARCHITECTURE.md
examples/: basic_server.rs  dashboard_example.rs  examples.rs  feishu_integration_example.rs  feishu_websocket_example.rs  inter_agent_messaging.rs  test_qwencode.rs  wecom_example.rs
issues/: 001-memory-exhaustion-crash.md  002-systemd-restart-loop.md  003-runtime-dependency-violation.md
newclaw/: Cargo.toml  LICENSE
newclaw-bin/0.7.0/: feishu-connect
newclaw/src/: lib.rs
newclaw/src/abac/: attribute.rs  decision.rs  evaluator.rs  mod.rs  policy.rs
newclaw/src/audit/: alert.rs  mod.rs  query.rs  report.rs  store.rs
newclaw/src/config/: hot_reload.rs  layers.rs  merge.rs  mod.rs  notification.rs  types.rs  watcher.rs
scripts/: download-newclaw.sh  performance_test.sh
src/: lib.rs  main.rs
src/cache/: mod.rs  redis.rs
src/channel/: base.rs  manager.rs  mod.rs  permission.rs  processor.rs
src/channels/: dingtalk.rs  discord.rs  feishu.rs  feishu_card.rs  feishu_file.rs  feishu_stream.rs  feishu_user.rs  mod.rs  qq.rs  telegram.rs
src/cli/: mod.rs  skill.rs
src/communication/: http.rs  message.rs  message_queue.rs  mod.rs  websocket.rs
src/config/: communication.rs  layers.rs  mod.rs  security.rs
src/context/: compression.rs  config.rs  ephemeral.rs  mod.rs  policy.rs  retrieval.rs  strategy.rs  token_counter.rs  transparency.rs  truncation.rs
src/core/: agent.rs  context.rs  degraded_mode.rs  heartbeat_reporter.rs  isolation.rs  llm.rs  mod.rs  self_check.rs  strategy.rs
src/dashboard/: admin.rs  audit.rs  auth.rs  auth_middleware.rs  chat.rs  config_api.rs  dashboard.html  memory.rs  metrics.rs  mod.rs  monitor.rs  session.rs  tasks.rs
src/dispatcher/: mod.rs
src/embedding/: batch_optimizer.rs  cache.rs  client.rs  mod.rs  pipeline.rs
src/federated/: aggregation.rs  cache.rs  encryption.rs  message.rs  mod.rs  protocol.rs  query.rs  replication.rs  storage.rs
src/feishu_websocket/: event.rs  frame.rs  heartbeat.rs  manager.rs  messages.rs  mod.rs  polling.rs  pool.rs  reconnect.rs  retry.rs  skill.rs  token_manager.rs  tools.rs
src/gateway/: mod.rs  mod.rs.bak
src/health/: mod.rs
src/heartbeat/: mod.rs
src/llm/: claude.rs  glm.rs  lazy_provider.rs  mod.rs  models.rs  ollama.rs  openai.rs  provider.rs  provider_selector.rs  qwencode.rs  streaming.rs
src/mcp/: client.rs  error.rs  mod.rs  prompts.rs  protocol.rs  resources.rs  tools.rs  transport.rs
src/memory/: code_embedding.rs  constraint.rs  file_memory.rs  mod.rs  shared.rs  storage.rs  storage_impl.rs  summary.rs  vector_store.rs
src/metrics/: mod.rs  prometheus.rs  registry.rs  resources.rs
src/openclaw/: mod.rs
src/plugin/: mod.rs
src/proto/: frame.proto  frame.rs  mod.rs  watchdog.proto
src/router/: audit_log.rs  connector.rs  isolation.rs  manager.rs  mod.rs  policy.rs  router.rs  sandbox.rs
src/security/: api_key.rs  audit.rs  injection.rs  jwt.rs  mod.rs  rate_limit.rs  rbac.rs  ssrf.rs
src/skill/: executor.rs  loader.rs  mod.rs  registry.rs  sandbox.rs  skillhub.rs
src/smart_controller/: mod.rs
src/task/: dag.rs  delayed_queue.rs  event_trigger.rs  mod.rs  scheduler.rs  session.rs
src/tools/: builtin.rs  channel_permission.rs  cron.rs  diagnostic.rs  error.rs  executor.rs  init.rs  memory_archive.rs  mod.rs  orchestrator.rs  permission.rs  permissions.rs  registry.rs  report.rs  safety.rs  tts.rs  workflow.rs
src/vector/: mod.rs
src/vector_db/: mod.rs
src/watchdog/: ai_analyzer.rs  audit.rs  config.rs  controller.rs  diagnostic.rs  lease.rs  (+5 more)
static/: dashboard.html  index.html  login.html
tests/: TEST_COMMANDS.md  TEST_CONTROL.yaml  TEST_REPORT.md  TEST_STATE.yaml  cache_hit_rate_test.rs  embedding_integration_test.rs  embedding_test.rs  fault_injection.rs  integration_test.rs  mcp_integration_test.rs  recovery_scenarios.rs  run_continuous_tests.sh  stress_test.rs  watchdog_integration.rs
workspace/: IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  workspace.yaml
(+92 files in other folders)
