[package]
name = "newclaw"
version = "0.1.0"
edition = "2021"
description = "Next-gen AI Agent framework - Rust performance + TypeScript plugins"
license = "MIT"
repository = "https://github.com/yourusername/newclaw"
authors = ["NewClaw Contributors"]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "fs"] }
tokio-util = "0.7"
once_cell = "1.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter", "json"] }

# UUID
uuid = { version = "1.0", features = ["v4"] }

# Async traits
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Web framework
axum = "0.8"

# Time handling
chrono = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Database (for context management)
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["mysql", "sqlite"] }

# Vector database (for semantic search) - Commented out, will add later
# hnswlib = "0.33"
# qdrant = "0.14"

# gRPC (for plugin communication) - Commented out until needed
# prost = { version = "0.14", features = ["prost-build"] }
# tonic = "0.12"

# Plugin system (Node.js) - Commented out until implemented
# plugin = { version = "0.1.0", path = "plugin" }

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dev-dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "test-util"] }
tracing-test = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
