[package]
name = "newclaw"
version = "0.6.0"
edition = "2021"
description = "Next-gen AI Agent framework - Rust performance + TypeScript plugins"
license = "MIT"
repository = "https://github.com/yourusername/newclaw"
authors = ["NewClaw Contributors"]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "fs", "rt", "process"] }
libc = "0.2"
tokio-util = "0.7"
tokio-stream = "0.1"
once_cell = "1.20"
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter", "json"] }

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# Async traits
async-trait = "0.1"
pin-project = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# URL encoding
urlencoding = "2.1"
url = "2.5"

# Crypto for WeCom
aes = "0.8"
cbc = "0.1"
sha1 = "0.10"
base64 = "0.22"
getrandom = "0.2"
rand = "0.8"

# Token counting (v0.5.0)
tiktoken-rs = "0.5"

# Headless Chrome (v0.5.0 - browser/canvas tools)
headless_chrome = "1.0"

# Image processing (v0.5.0 - screenshots)
image = "0.25"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# XML parsing for WeCom
quick-xml = { version = "0.37", features = ["serialize"] }

# Regex
regex = "1.11"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# JWT
jsonwebtoken = "9"

# HMAC for GLM JWT
ring = "0.17"

# Redis (optional)
redis = { version = "0.27", optional = true, features = ["aio", "tokio-comp"] }

# Password hashing
password-hash = "0.5"
argon2 = "0.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Config
toml = "0.8"
shellexpand = "3.1"

# System info (v0.5.5 - resource monitoring)
sysinfo = "0.33"

# Testing
tempfile = "3.14"

# Database (for context management)
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["mysql", "sqlite"] }

# Vector database (for semantic search) - Commented out, will add later
# hnswlib = "0.33"
# qdrant = "0.14"

# gRPC (v0.6.0 - Watchdog 双主控通信)
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.12"

# Plugin system (Node.js) - Commented out until implemented
# plugin = { version = "0.1.0", path = "plugin" }

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[features]
default = []
redis-support = ["redis"]

[dev-dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "test-util"] }
libc = "0.2"
tracing-test = "0.1"
criterion = "0.5"

# [[bench]]
# name = "embedding_bench"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
