[package]
name = "newclaw"
version = "0.7.0"
edition = "2021"
authors = ["NewClaw Team"]
description = "Production-ready AI Agent Framework - Stability + Security + Enterprise"
license = "MIT OR Apache-2.0"
repository = "https://github.com/newclaw/newclaw"
readme = "README.md"
keywords = ["ai", "agent", "llm", "openai", "ollama"]
categories = ["science", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"

# Regex for ABAC
regex = "1.10"

# Configuration
config = "0.14"

# File watching
notify = "6.1"

# High-performance locking
parking_lot = "0.12"

# Security (from v0.2.0)
jsonwebtoken = "9.2"
bcrypt = "0.15"
rand = "0.8"

# Base64 encoding (for QQ Bot media)
base64 = "0.21"

# SQLite for audit persistence
rusqlite = { version = "0.30", features = ["bundled"] }

# CSV export
csv = "1.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.10"

[[bin]]
name = "newclaw"
path = "src/main.rs"

[lib]
name = "newclaw"
path = "src/lib.rs"
